<resources>
    <string name="app_name">Sayle</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Username or Email</string>
    <string name="prompt_password">Password (4 Characters or more)</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="action_sign_in">register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="title_activity_main_menu">mainMenu</string>
    <string name="create_account">Already have an account? Tap here</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="title_activity_garage_location">Map</string>
    <string name="title_activity_donate">donateActivity</string>
    <string name="title_activity_other_sale">otherSaleActivity</string>
    <string name="section_format">Hello World from section: %1$d</string>
</resources>
