<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_vertical|center_horizontal"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.epsulon.fbla_proto_2.main.loginActivity"
    android:weightSum="1">

    <!-- Login progress -->

    <ProgressBar
        android:id="@+id/login_progress"
        style="?android:attr/progressBarStyleLarge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:visibility="gone" />

    <ImageView
        android:layout_width="200dp"
        android:layout_height="120dp"
        android:id="@+id/imageView3"
        android:layout_gravity="top|center"
        android:src="@drawable/applogo"
        android:layout_weight="0.53" />

    <LinearLayout
        android:id="@+id/email_login_form"
        android:layout_width="match_parent"
        android:layout_height="337dp"
        android:orientation="vertical"
        android:gravity="fill_vertical|center_horizontal">

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColorHint="#ff7700">
            <AutoCompleteTextView
                android:id="@+id/email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/prompt_email"
                android:inputType="textEmailAddress"
                android:maxLines="1"
                android:singleLine="true"
                android:textColor="#ffffff"
                android:textColorHint="#e4e4e4"
                android:textColorHighlight="#e4e4e4"
                android:textColorLink="#e4e4e4"
                android:fontFamily="fonts/FuturaLight.ttf"/>

        </android.support.design.widget.TextInputLayout>


        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColorHint="#ff7700">

            <EditText
                android:id="@+id/password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/prompt_password"
                android:imeActionId="@+id/login"
                android:imeActionLabel="@string/action_sign_in_short"
                android:imeOptions="actionUnspecified"
                android:inputType="textPassword"
                android:maxLines="1"
                android:singleLine="true"
                android:textColor="#ffffff"
                android:textColorHint="#e4e4e4"
                android:textColorLink="#e4e4e4"
                android:textColorHighlight="#e4e4e4"
                android:fontFamily="fonts/FuturaLight.ttf"/>

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColorHint="#ff7700">

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:ems="10"
                android:id="@+id/confirmPassword"
                android:layout_gravity="center_horizontal"
                android:hint="@string/confirm_password"
                android:textColorHint="#e4e4e4"
                android:textColorHighlight="#e4e4e4"
                android:textColorLink="#e4e4e4"
                android:textColor="#ffffff"
                android:fontFamily="fonts/FuturaLight.ttf"/>

        </android.support.design.widget.TextInputLayout>

        <Button
            android:id="@+id/email_sign_in_button"
            style="?android:textAppearanceSmall"
            android:layout_width="278dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/action_sign_in"
            android:textStyle="bold"
            android:background="@drawable/button_bg_rounded_corners"
            android:foreground="#00ffbb00"
            android:backgroundTint="#ff9900"
            android:foregroundTint="#00ffbb00"
            android:shadowColor="#000000"
            android:visibility="visible"
            android:layout_gravity="center"
            android:ellipsize="marquee"
            android:enabled="true"
            android:textColor="#ffffff"
            android:backgroundTintMode="src_over"
            android:fontFamily="fonts/FuturaLight.ttf"
            />

        <Button
            style="?android:attr/buttonStyleSmall"
            android:layout_width="wrap_content"
            android:layout_height="22dp"
            android:text="@string/create_account"
            android:id="@+id/existingAccountButton"
            android:textColor="#d4d4d4"
            android:background="#00ffffff"
            android:shadowColor="#00ffffff"
            android:backgroundTint="#00ffffff"
            android:enabled="true"
            android:foreground="#00ffffff"
            android:textSize="10dp"
            android:visibility="visible"
            android:textColorHint="#ffffff"/>

    </LinearLayout>

</LinearLayout>
